syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resourcespb";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/commonpb/common.proto";

package dev.multy.resources;

message CreateDatabaseRequest {
  DatabaseArgs resource = 1;
}

message ReadDatabaseRequest {
  string resource_id = 1;
}

message UpdateDatabaseRequest {
  string resource_id = 1;
  DatabaseArgs resource = 2;
}

message DeleteDatabaseRequest {
  string resource_id = 1;
}

enum DatabaseEngine {
  UNKNOWN_ENGINE = 0;
  MYSQL = 1;
  POSTGRES = 2;
  MARIADB = 3;
}


message DatabaseGcpOverride {
  string project = 1;
}


message DatabaseArgs {
  common.ResourceCommonArgs common_parameters = 1;
  string name = 2;
  DatabaseEngine engine = 3;
  string engine_version = 4;
  int64 storage_gb = 5;
  common.DatabaseSize.Enum size = 6;
  string username = 7;
  string password = 8;
  repeated string subnet_ids = 9;
  int32 port = 10;
  string subnet_id = 11;

  DatabaseGcpOverride gcp_override = 12;
}

message DatabaseAwsOutputs {
  string db_instance_id = 1;
  string default_network_security_group_id = 2;
  string db_subnet_group_id = 3;
}

message DatabaseAzureOutputs {
  string database_server_id = 1;
}


message DatabaseGcpOutputs {
  string sql_database_instance_id = 1;
}

message DatabaseResource {
  common.CommonResourceParameters common_parameters = 1;
  string name = 2;
  DatabaseEngine engine = 3;
  string engine_version = 4;
  int64 storage_gb = 5;
  common.DatabaseSize.Enum size = 6;
  string username = 7;
  string password = 8;
  repeated string subnet_ids = 9;
  int32 port = 12;
  string subnet_id = 13;
  DatabaseGcpOverride gcp_override = 14;

  //outputs
  string host = 10;
  string connection_username = 11;
  DatabaseAwsOutputs aws_outputs = 15;
  DatabaseAzureOutputs azure_outputs = 16;
  DatabaseGcpOutputs gcp_outputs = 17;
}
